# flask-app-template

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/flask_project_template/: main.py
src/flask_project_template/api/routes/: __init__.py  home.py
src/flask_project_template/api/views/: home.py
